syntax = "proto3";

package com.trafficparrot.demo.product.logging;

message LoggingRequestDebug {
    string message = 1;
}

message LoggingRequestInfo {
    string message = 1;
}

message LoggingRequestError {
    string message = 1;
}

message LoggingResponse {
    oneof response {
        LoggingResponseSuccess success = 1;
        LoggingResponseError error = 2;
    }
}

message LoggingResponseSuccess {
}

message LoggingResponseError {
    string message = 1;
}